--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="mt-16">
                     <div class="quote-card p-8 rounded-lg max-w-4xl mx-auto shadow-lg">
                         <p class="text-xl italic text-slate-700">"Founder Therapy is consistently one of the highest-rated program elements. We do it on the first day when everyone meets each other. They off the bat get to rip down the walls and be very vulnerable with each other in a safe space. Founders found it very, very valuable, and they learned a lot coming out of it. There are a lot of events and community groups, but to my knowledge, there isn't one for startup founders, where they are coming in to talk about real problems and trying to help each other solve them."</p>
-                        <p class="mt-4 font-semibold text-slate-800">- <a href="https://www.linkedin.com/in/praveeni-rasiah/">Praveeni Rasiah</a>, Director, Community & Partnerships, <a href="https://tbdc.com">TBDC</a></p>
+                        <p class="mt-4 font-semibold text-slate-800">- <a href="https://www.linkedin.com/in/praveeni-rasiah/" target="_blank">Praveeni Rasiah</a>, Director, Community & Partnerships, <a href="https://tbdc.com">TBDC</a></p>
                     </div>
                 </div>
             </div>
@@ -183,17 +183,17 @@
                  <div class="mt-16 grid md:grid-cols-2 gap-8">
                     <div class="quote-card p-8 rounded-lg shadow-lg">
                         <p class="text-xl italic text-slate-700">"I think it was like the most helpful session in the whole program. You never really get to talk about your weak points with other people because you're always trying to impress."</p>
-                        <p class="mt-4 font-semibold text-slate-800">- <a href="https://www.linkedin.com/in/jinheecindypark/">Cindy</a>, Founder</p>
+                        <p class="mt-4 font-semibold text-slate-800">- <a href="https://www.linkedin.com/in/jinheecindypark/" target="_blank">Cindy</a>, Founder</p>
                     </div>
                      <div class="quote-card p-8 rounded-lg shadow-lg">
                         <p class="text-xl italic text-slate-700">"Advice not allowed. That's amazing. The focus on stories and the experience that other founders can share is a game changer"</p>
-                        <p class="mt-4 font-semibold text-slate-800">- <a href="https://www.linkedin.com/in/ahmed-o-mansour/">Ahmed</a>, Founder</p>
+                        <p class="mt-4 font-semibold text-slate-800">- <a href="https://www.linkedin.com/in/ahmed-o-mansour/" target="_blank">Ahmed</a>, Founder</p>
                     </div>
                  </div>
                  <div class="mt-16 grid md:grid-cols-2 gap-8">
                     <div class="quote-card p-8 rounded-lg shadow-lg">
                         <p class="text-xl italic text-slate-700">"Talking to other founders teaches you more than any program, book, or course!"</p>
-                       <p class="mt-4 font-semibold text-slate-800">- <a href="https://www.linkedin.com/in/sabamehrm">Nick</a>, Founder</p>
+                       <p class="mt-4 font-semibold text-slate-800">- <a href="https://www.linkedin.com/in/sabamehrm target="_blank"Nick</a>, Founder</p>
                     </div>
                      <div class="quote-card p-8 rounded-lg shadow-lg">
                         <p class="text-xl italic text-slate-700">"Being a founder is a journey that has patterns and similarities that only founders can see and understand."</p>
@@ -219,7 +219,7 @@
     <!-- Footer -->
     <footer class="bg-slate-100 py-8">
         <div class="container mx-auto px-6 text-center text-slate-500">
-            <p>&copy; 2025 <a href="https://abilitymatrix.com">AbilityMatrix</a> and <a href="https://producttherapy.co/">Product Therapy</a>. All Rights Reserved.</p>
+            <p>&copy; 2025 <a href="https://abilitymatrix.com" target="_blank">AbilityMatrix</a> and <a href="https://producttherapy.co/" target="_blank">Product Therapy</a>. All Rights Reserved.</p>
         </div>
     </footer>
 
