--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                  <div class="mt-16 grid md:grid-cols-2 gap-8">
                     <div class="quote-card p-8 rounded-lg shadow-lg">
                         <p class="text-xl italic text-slate-700">"Talking to other founders teaches you more than any program, book, or course!"</p>
-                       <p class="mt-4 font-semibold text-slate-800">- <a href="https://www.linkedin.com/in/sabamehrm" target="_blank"</a>Nick, Founder</p>
+                       <p class="mt-4 font-semibold text-slate-800">- <a href="https://www.linkedin.com/in/sabamehrm" target="_blank">Nick</a>, Founder</p>
                     </div>
                      <div class="quote-card p-8 rounded-lg shadow-lg">
                         <p class="text-xl italic text-slate-700">"Being a founder is a journey that has patterns and similarities that only founders can see and understand."</p>
